apps/staging/excalidraw/room-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: excalidraw-room-http
  namespace: excalidraw-stage
spec:
  hostnames:
    - excalidraw-room-stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: excalidraw-room-https
  namespace: excalidraw-stage
spec:
  hostnames:
    - excalidraw-room-stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
      - name: excalidraw-room
        port: 80
